[package]
name = "blazelist-protocol"
version = "1.0.0"
edition.workspace = true

[lints]
workspace = true

[features]
default = ["io"]
io = ["dep:tokio"]

[dependencies]
blake3.workspace = true
chrono.workspace = true
postcard.workspace = true
rgb.workspace = true
semver.workspace = true
serde.workspace = true
tokio = { workspace = true, optional = true }
uuid.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true
expect-test.workspace = true

[[bench]]
name = "types_bench"
harness = false

[[bench]]
name = "protocol_bench"
harness = false
