[package]
name = "blazelist-server"
version = "2.2.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
blazelist-protocol.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
postcard.workspace = true
quinn.workspace = true
rcgen.workspace = true
rgb.workspace = true
rusqlite.workspace = true
rustls.workspace = true
serde.workspace = true
time = "0.3"
tokio.workspace = true
tracing.workspace = true
tokio-rustls.workspace = true
uuid.workspace = true
wtransport.workspace = true

[dev-dependencies]
criterion.workspace = true
expect-test.workspace = true
tempfile.workspace = true

[[bench]]
name = "server_bench"
harness = false
